Update for GH 2.2.2
Update for GH 2.2.2

--- a/ps4/index.html
+++ b/ps4/index.html
@@ -279,6 +279,11 @@ Este host está basado enteramente en el trabajo de Karo Sharifi. Todo los credi
         PLfile = "goldhen_2.2.1_900.bin";
         load_poc();
     }
+    function goldhen222(){
+        progress.innerHTML="Cargando Goldhen 2.2.2... Espera";
+        PLfile = "goldhen_2.2.2_900.bin";
+        load_poc();
+    }
     </script>
     <script src="int64.js"></script>
     <script src="rop.js"></script>
@@ -296,6 +301,7 @@ Este host está basado enteramente en el trabajo de Karo Sharifi. Todo los credi
     <button class="head-boton-size azul-bg" id="button-Payload" onMouseOver="progress.innerHTML='GoldHen v2.1.2 by SISTR0 for PS4 9.00 Fw'"; onmouseout="progress.innerHTML='Status'" type="button" onclick="goldhen212()"><div style="text-align: center;"><img src="gh_v212.png" width="80" height="100"></div></button>
     <button class="head-boton-size azul-bg" id="button-Payload" onMouseOver="progress.innerHTML='GoldHen v2.2 by SISTR0 for PS4 9.00 Fw'"; onmouseout="progress.innerHTML='Status'" type="button" onclick="goldhen22()"><div style="text-align: center;"><img src="gh_v22.png" width="80" height="100"></div></button>
     <button class="head-boton-size azul-bg" id="button-Payload" onMouseOver="progress.innerHTML='GoldHen v2.2.1 by SISTR0 for PS4 9.00 Fw'"; onmouseout="progress.innerHTML='Status'" type="button" onclick="goldhen221()"><div style="text-align: center;"><img src="gh_v221.png" width="80" height="100"></div></button>
+    <button class="head-boton-size azul-bg" id="button-Payload" onMouseOver="progress.innerHTML='GoldHen v2.2.2 by SISTR0 for PS4 9.00 Fw'"; onmouseout="progress.innerHTML='Status'" type="button" onclick="goldhen222()"><div style="text-align: center;"><img src="gh_v222.png" width="80" height="100"></div></button>
     <br>
     <br>
     <div class="SelectF"><input type="text" placeholder="PS4 IP Here" id="psip"></div>
