--- a/ps4/index.html
+++ b/ps4/index.html
@@ -289,6 +289,12 @@ Este host está basado enteramente en el trabajo de Karo Sharifi. Todo los credi
         PLfile = "goldhen_2.2.4_900.bin";
         load_poc();
     }
+
+    function goldhen23(){
+        progress.innerHTML="Cargando Goldhen 2.3... Espera";
+        PLfile = "goldhen_2.3_900.bin";
+        load_poc();
+    }
     </script>
     <script src="int64.js"></script>
     <script src="rop.js"></script>
@@ -308,6 +314,7 @@ Este host está basado enteramente en el trabajo de Karo Sharifi. Todo los credi
     <button class="head-boton-size azul-bg" id="button-Payload" onMouseOver="progress.innerHTML='GoldHen v2.2.1 by SISTR0 for PS4 9.00 Fw'"; onmouseout="progress.innerHTML='Status'" type="button" onclick="goldhen221()"><div style="text-align: center;"><img src="gh_v221.png" width="80" height="100"></div></button>
     <button class="head-boton-size azul-bg" id="button-Payload" onMouseOver="progress.innerHTML='GoldHen v2.2.2 by SISTR0 for PS4 9.00 Fw'"; onmouseout="progress.innerHTML='Status'" type="button" onclick="goldhen222()"><div style="text-align: center;"><img src="gh_v222.png" width="80" height="100"></div></button>
     <button class="head-boton-size azul-bg" id="button-Payload" onMouseOver="progress.innerHTML='GoldHen v2.2.4 by SISTR0 for PS4 9.00 Fw'"; onmouseout="progress.innerHTML='Status'" type="button" onclick="goldhen224()"><div style="text-align: center;"><img src="gh_v224.png" width="80" height="100"></div></button>
+    <button class="head-boton-size azul-bg" id="button-Payload" onMouseOver="progress.innerHTML='GoldHen v2.3 by SISTR0 for PS4 9.00 Fw'"; onmouseout="progress.innerHTML='Status'" type="button" onclick="goldhen23()"><div style="text-align: center;"><img src="gh_v23.png" width="80" height="100"></div></button>
     <br>
     <br>
     <div class="SelectF"><input type="text" placeholder="PS4 IP Here" id="psip"></div>
